fix overflow

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@
 }
 
 html, body {
-  @apply bg-white dark:bg-night scroll-smooth dark:text-white cursor-none;
+  @apply bg-white dark:bg-night scroll-smooth dark:text-white cursor-none overflow-x-hidden;
 }
 
 .red-dot {
